--- a/web/index.html
+++ b/web/index.html
@@ -8,12 +8,13 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap"
+    rel="stylesheet">
   <title>Vite App</title>
 </head>
 
 <body>
-  <div class="grid grid-cols-1 md:grid-cols-3 h-full w-full sticky top-0 bg-white">
+  <div class="grid grid-cols-1 md:grid-cols-3 h-full w-full sticky top-0 bg-white z-10">
     <div class="w-full h-28 flex md:grid-cols-3  justify-between">
 
       <div class="bg-white mt-2 lg:ml-10 md:grid-cols-3 xl:grid-cols-3">
@@ -80,17 +81,17 @@
   <!-- Cards part -->
   <div class="grid grid-cols-3 bg-[#E7F2ED]">
 
-      <div class="grid-cols-1 md:justify-self-center">
-        <img src="https://i.ibb.co/DRKsLwK/Rectangle-65.png" alt="Poster 1" class="md:mt-28">
-      </div>
+    <div class="grid-cols-1 md:justify-self-center">
+      <img src="https://i.ibb.co/DRKsLwK/Rectangle-65.png" alt="Poster 1" class="md:mt-28">
+    </div>
 
-      <div class="grid-cols-1 justify-self-center">
-        <img src="https://i.ibb.co/ck9nvqg/Rectangle-66.png" alt="Poster 2" class="md:mt-20">
-      </div>
+    <div class="grid-cols-1 justify-self-center">
+      <img src="https://i.ibb.co/ck9nvqg/Rectangle-66.png" alt="Poster 2" class="md:mt-20">
+    </div>
 
-      <div class="grid-cols-1 justify-self-center">
-        <img src="https://i.ibb.co/3djBVff/Rectangle-67.png" alt="Poster 3" class="md:mt-28">
-      </div>
+    <div class="grid-cols-1 justify-self-center">
+      <img src="https://i.ibb.co/3djBVff/Rectangle-67.png" alt="Poster 3" class="md:mt-28">
+    </div>
 
 
     <div class="text-3xl col-span-3" style="font-family: Playfair Display;">
@@ -103,14 +104,16 @@
       </div>
 
       <div class="md:mx-36 text-xl text-center">
-        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem consequatur placeat iure illo eos provident fugiat repellendus perferendis
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quidem consequatur placeat iure illo eos provident
+        fugiat repellendus perferendis
         tempora reiciendis quibusdam corrupti consequuntur earum praesentium, harum doloremque ad saepe ratione.
       </div>
     </div>
 
 
-    <div class="mt-8 text-center text-2xl border-2 border-[#D0D0A7] md:col-start-2 md:col-end-3 col-span-3 mb-16 hover:bg-[#D0D0A7] hover:text-white font-head">
-      Read The Whole Strory 
+    <div
+      class="mt-8 text-center text-2xl border-2 border-[#D0D0A7] md:col-start-2 md:col-end-3 col-span-3 mb-16 hover:bg-[#D0D0A7] hover:text-white font-head">
+      Read The Whole Strory
     </div>
   </div>
 
@@ -118,7 +121,7 @@
   <!-- Cream-color Part -->
   <div class="grid grid-cols-3 bg-[#F2F2E6]">
     <div class="xl:grid-cols-1 xl:ml-36 xl:pt-16 xl:pb-16 border-r-4 border-[#D0D0A7] col-span-3 md:col-span-1">
-        <img src="https://i.ibb.co/vjJj86t/Rectangle-65-1.png" alt="Image">
+      <img src="https://i.ibb.co/vjJj86t/Rectangle-65-1.png" alt="Image">
     </div>
 
     <div class="xl:col-span-2 col-span-3">
@@ -127,58 +130,150 @@
       </div>
 
       <div class="mt-10 xl:pt-16 text-2xl xl:mx-16 xl:w-9/12 font-head text-[#777777] mx-6">
-        Nunc condimentum, magna vel sodales mollis, nisl nibh ornare eros, vel malesuada nunc metus. Aenean vitae arcu auctor, imperdiet nisl quis interdum lacus.
+        Nunc condimentum, magna vel sodales mollis, nisl nibh ornare eros, vel malesuada nunc metus. Aenean vitae arcu
+        auctor, imperdiet nisl quis interdum lacus.
       </div>
 
-      <div class="xl:mx-16 mt-16 font-head border-2 border-[#D0D0A7] xl:w-1/6 text-center xl:p-4 text-2xl hover:bg-[#D0D0A7] hover:text-white">
+      <div
+        class="xl:mx-16 mt-16 font-head border-2 border-[#D0D0A7] xl:w-1/6 2xl:w-56 text-center xl:p-4 text-2xl hover:bg-[#D0D0A7] hover:text-white">
         GET STARTED
       </div>
     </div>
   </div>
 
-  <div class="grid grid-cols-3 xl:ml-28">
-      <div class="grid-cols-1 mt-8">
-        <div>
+  <div class="grid grid-cols-3 xl:ml-28 mb-20">
+    <div class="grid-cols-1 mt-8">
+      <div>
+        <div class="relative">
+          <div class="absolute h-full w-full hover:bg-[#00000095]">
+            <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center">ARCHITECTURE</div>
+          </div>
           <img src="https://i.ibb.co/qy5qmQS/20-22.png" alt="Image">
         </div>
-
-        <div class="grid-cols-1 mt-28">
-          <img src="https://i.ibb.co/MZHyzmw/7-1.png" alt="image">
-        </div>
       </div>
 
-      <div>
-        <div>
-          THE PORTFOLIO
-        </div>
-
-        <div>
-          VIEW RECENT WORK
-        </div>
-
-        <div>
-          EXPLORE
-        </div>
-      </div>
-
-      <div class="justify-self-end ">
+      <div class="grid-cols-1 mt-28">
         <div>
           <div class="relative">
             <div class="absolute h-full w-full hover:bg-[#00000095]">
-            <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center">INTERIOR</div>
-          </div>
-            <img src="https://i.ibb.co/GMQhjhg/21-1.png" alt="Image">
+              <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center">PHOTOGRAPHY</div>
+            </div>
+            <img src="https://i.ibb.co/MZHyzmw/7-1.png" alt="image">
           </div>
         </div>
+      </div>
+    </div>
 
-        <div class="mt-28">
+    <div class="text-center my-auto hidden 2xl:block xl:block">
+      <div class="font-head font-bold text-[#04282D] text-xl">
+        THE PORTFOLIO
+      </div>
+
+      <div class="text-[#04282D] text-4xl font-head font-bold 2xl:w-40 2xl:mx-auto my-4">
+        VIEW RECENT WORK
+      </div>
+
+      <div class="font-head text-[#04282D] border-2 border-[#04282D] 2xl:w-24 mx-auto hover:bg-black hover:text-white">
+        EXPLORE
+      </div>
+    </div>
+
+    <div>
+      <div class="mt-8">
+        <div class="relative">
+          <div class="absolute h-full w-full hover:bg-[#00000095]">
+            <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center">INTERIOR</div>
+          </div>
+          <img src="https://i.ibb.co/GMQhjhg/21-1.png" alt="Image">
+        </div>
+
+
+        <div class="relative mt-28">
+          <div class="absolute h-full w-full hover:bg-[#00000095]">
+            <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center">ANIMAL</div>
+          </div>
           <img src="https://i.ibb.co/YjBV3g5/22-1.png" alt="Image">
         </div>
       </div>
+    </div>
   </div>
 
+  <div class="grid grid-cols-2 bg-[#E7F2ED]"> 
+    <div class="border-r-2 border-[#D0D0A7] py-28">
+      <div class="text-3xl font-head mb-8 2xl:ml-60">
+        Tools For Creatives
+      </div>
 
+      <div class="2xl:ml-60 2xl:text-left 2xl:mr-10 text-[#777777] font-head">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+      </div>
 
+      <div class="2xl:ml-60 font-head mt-8 border-2 border-[#D0D0A7] text-center 2xl:w-40 hover:bg-[#D0D0A7] hover:text-white">
+        GO TO THE BLOG
+      </div>
+    </div>
+
+    <div class="justify-self-center flex my-auto">
+      <div class="mx-5">
+        <img src="https://i.ibb.co/c3LVy4S/23.png" alt="Image" class="h-96">
+      </div>
+
+      <div>
+        <img src="https://i.ibb.co/xSwm9dD/24.png" alt="Image" class="h-96">
+      </div>
+    </div>
+  </div>
+
+  <div class="grid grid-cols-3 mx-24 py-10 pb-32">
+    <div class="border-2 boreder-[#D0D0A7] py-5 px-5 mx-10 font-head hover:bg-[#E7F2ED] 2xl:h-56 ">
+      “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor interdum ipsum, non finibus libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit.”
+      <div class="py-10 pl-24">
+        <div class="absolute 2xl:p-2.5">
+          <img src="https://i.ibb.co/TPj4Pcj/Ellipse-10.png" alt="Image">
+        </div>
+        <img src="https://i.ibb.co/28dGXN0/Ellipse-11.png" alt="Circle">
+        <div class="-m-4 font-head pt-5">
+          CLIENT NAME HERE
+        </div>
+      </div>
+    </div>
+
+    <div class="border-2 boreder-[#D0D0A7] py-5 px-5 mx-10 font-head hover:bg-[#E7F2ED]  2xl:h-56">
+      “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor interdum ipsum, non finibus libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit.”
+      <div class="py-10 pl-24">
+        <div class="absolute 2xl:p-2.5">
+          <img src="https://i.ibb.co/RBKxrb0/Ellipse-10-1.png" alt="Image">
+        </div>
+        <img src="https://i.ibb.co/28dGXN0/Ellipse-11.png" alt="Circle">
+        <div class="-m-4 font-head pt-5">
+          CLIENT NAME HERE
+        </div>
+      </div>
+    </div>
+
+    <div class="border-2 boreder-[#D0D0A7] py-5 px-5 mx-10 font-head hover:bg-[#E7F2ED]  2xl:h-56 ">
+      “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor interdum ipsum, non finibus libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit.”
+      <div class="py-10 pl-24">
+        <div class="absolute 2xl:p-2.5">
+          <img src="https://i.ibb.co/X5FjsMv/Ellipse-10-2.png" alt="Image">
+        </div>
+        <img src="https://i.ibb.co/28dGXN0/Ellipse-11.png" alt="Circle">
+        <div class="-m-4 font-head pt-5">
+          CLIENT NAME HERE
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="grid grid-cols-3 bg-[#E7F2ED] pt-16">
+    <div class="col-span-2 justify-self-end mr-5">
+      <img src="https://i.ibb.co/YkpsGbh/3.png" alt="Image" class="h-3/4">
+    </div>
+
+    <div>
+      <img src="https://i.ibb.co/6WqXN6w/26.png" alt="Image" class="h-3/4">
+    </div>
+
+  </div>
 </body>
-
 </html>
