--- a/web/index.html
+++ b/web/index.html
@@ -8,8 +8,8 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap"
-    rel="stylesheet">
+  <script src="./node_modules/tw-elements/dist/js/index.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&family=Playfair+Display+SC&display=swap" rel="stylesheet">
   <title>Vite App</title>
 </head>
 
@@ -145,7 +145,7 @@
     <div class="grid-cols-1 mt-8">
       <div>
         <div class="relative">
-          <div class="absolute h-full w-full hover:bg-[#00000095]">
+          <div class="absolute h-full hover:bg-[#00000095] w-[460px]">
             <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center">ARCHITECTURE</div>
           </div>
           <img src="https://i.ibb.co/qy5qmQS/20-22.png" alt="Image">
@@ -155,7 +155,7 @@
       <div class="grid-cols-1 mt-28">
         <div>
           <div class="relative">
-            <div class="absolute h-full w-full hover:bg-[#00000095]">
+            <div class="absolute h-full w-[460px] hover:bg-[#00000095]">
               <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center">PHOTOGRAPHY</div>
             </div>
             <img src="https://i.ibb.co/MZHyzmw/7-1.png" alt="image">
@@ -164,7 +164,7 @@
       </div>
     </div>
 
-    <div class="text-center my-auto hidden 2xl:block xl:block">
+    <div class="text-center my-auto hidden  xl:block">
       <div class="font-head font-bold text-[#04282D] text-xl">
         THE PORTFOLIO
       </div>
@@ -181,7 +181,7 @@
     <div>
       <div class="mt-8">
         <div class="relative">
-          <div class="absolute h-full w-full hover:bg-[#00000095]">
+          <div class="absolute h-full w-[460px] hover:bg-[#00000095]">
             <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center">INTERIOR</div>
           </div>
           <img src="https://i.ibb.co/GMQhjhg/21-1.png" alt="Image">
@@ -189,7 +189,7 @@
 
 
         <div class="relative mt-28">
-          <div class="absolute h-full w-full hover:bg-[#00000095]">
+          <div class="absolute h-full w-[460px] hover:bg-[#00000095]">
             <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center">ANIMAL</div>
           </div>
           <img src="https://i.ibb.co/YjBV3g5/22-1.png" alt="Image">
@@ -198,14 +198,15 @@
     </div>
   </div>
 
-  <div class="grid grid-cols-2 bg-[#E7F2ED]"> 
+  <div class="grid grid-cols-2 bg-[#E7F2ED]">
     <div class="border-r-2 border-[#D0D0A7] py-28">
       <div class="text-3xl font-head mb-8 2xl:ml-60">
         Tools For Creatives
       </div>
 
       <div class="2xl:ml-60 2xl:text-left 2xl:mr-10 text-[#777777] font-head">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor
+        sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.
       </div>
 
       <div class="2xl:ml-60 font-head mt-8 border-2 border-[#D0D0A7] text-center 2xl:w-40 hover:bg-[#D0D0A7] hover:text-white">
@@ -226,8 +227,9 @@
 
   <div class="grid grid-cols-3 mx-24 py-10 pb-32">
     <div class="border-2 boreder-[#D0D0A7] py-5 px-5 mx-10 font-head hover:bg-[#E7F2ED] 2xl:h-56 ">
-      “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor interdum ipsum, non finibus libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit.”
-      <div class="py-10 pl-24">
+      “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor interdum ipsum, non finibus libero. Lorem ipsum dolor sit amet, consectetur
+      adipiscing elit.”
+      <div class="xl:py-16 xl:pl-36">
         <div class="absolute 2xl:p-2.5">
           <img src="https://i.ibb.co/TPj4Pcj/Ellipse-10.png" alt="Image">
         </div>
@@ -239,8 +241,9 @@
     </div>
 
     <div class="border-2 boreder-[#D0D0A7] py-5 px-5 mx-10 font-head hover:bg-[#E7F2ED]  2xl:h-56">
-      “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor interdum ipsum, non finibus libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit.”
-      <div class="py-10 pl-24">
+      “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor interdum ipsum, non finibus libero. Lorem ipsum dolor sit amet, consectetur
+      adipiscing elit.”
+      <div class="xl:py-16 xl:pl-36">
         <div class="absolute 2xl:p-2.5">
           <img src="https://i.ibb.co/RBKxrb0/Ellipse-10-1.png" alt="Image">
         </div>
@@ -252,8 +255,9 @@
     </div>
 
     <div class="border-2 boreder-[#D0D0A7] py-5 px-5 mx-10 font-head hover:bg-[#E7F2ED]  2xl:h-56 ">
-      “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor interdum ipsum, non finibus libero. Lorem ipsum dolor sit amet, consectetur adipiscing elit.”
-      <div class="py-10 pl-24">
+      “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor interdum ipsum, non finibus libero. Lorem ipsum dolor sit amet, consectetur
+      adipiscing elit.”
+      <div class="xl:py-16 xl:pl-36">
         <div class="absolute 2xl:p-2.5">
           <img src="https://i.ibb.co/X5FjsMv/Ellipse-10-2.png" alt="Image">
         </div>
@@ -266,14 +270,257 @@
   </div>
 
   <div class="grid grid-cols-3 bg-[#E7F2ED] pt-16">
-    <div class="col-span-2 justify-self-end mr-5">
-      <img src="https://i.ibb.co/YkpsGbh/3.png" alt="Image" class="h-3/4">
+    <div class="flex col-span-2 justify-self-end">
+      <div class="mr-32 my-auto col-span-1">
+        <img src="https://cdn-icons-png.flaticon.com/128/2985/2985162.png" alt="Larrow" class="h-[30px]">
+      </div>
+
+      <div class="col-span-2 justify-self-end mr-5">
+        <img src="https://i.ibb.co/XXHBJTb/3.png" alt="Image" class="h-3/4 w-full">
+      </div>
     </div>
 
+
     <div>
-      <img src="https://i.ibb.co/6WqXN6w/26.png" alt="Image" class="h-3/4">
+      <img src="https://i.ibb.co/6WqXN6w/26.png" alt="Image">
     </div>
 
   </div>
+
+
+  <ul class="mb-5 flex list-none flex-col flex-wrap border-b-0 pl-0 md:flex-row pt-16 mx-40" role="tablist" data-te-nav-ref>
+    <li role="presentation">
+      <a href="#tabs-home" class="my-2 block  px-7 pt-4 pb-3.5 text-3xl font-head font-medium uppercase leading-tight text-black"
+        data-te-toggle="pill" data-te-target="#tabs-home" data-te-nav-active role="tab" aria-controls="tabs-home" aria-selected="true">Lifestyle </a>
+    </li>
+    <li role="presentation">
+      <a href="#tabs-profile"
+        class="focus:border-transparen my-2 block px-7 pt-4 pb-3.5 text-3xl font-head font-medium uppercase leading-tight text-black"
+        data-te-toggle="pill" data-te-target="#tabs-profile" role="tab" aria-controls="tabs-profile" aria-selected="false">Travel</a>
+    </li>
+    <li role="presentation">
+      <a href="#tabs-messages"
+        class="my-2 block border-x-0 border-t-0 border-b-2 border-transparent px-7 pt-4 pb-3.5 text-3xl font-head font-medium uppercase leading-tight text-black hover:isolate hover:border-transparent focus:isolate focus:border-transparent  dark:text-neutral-400 dark:hover:bg-transparent dark:data-[te-nav-active]:border-primary-400 dark:data-[te-nav-active]:text-primary-400"
+        data-te-toggle="pill" data-te-target="#tabs-messages" role="tab" aria-controls="tabs-messages" aria-selected="false">Photos</a>
+    </li>
+  </ul>
+  <div class="mb-6 pb-16 mx-40">
+    <div class="hidden opacity-100 transition-opacity duration-150 ease-linear data-[te-tab-active]:block p-2 border-2 border-[#0B8497]"
+      id="tabs-home" role="tabpanel" aria-labelledby="tabs-home-tab" data-te-tab-active>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor
+      sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor sit amet,
+      consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor sit amet, consectetur
+      adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, Pulvinar dapibus leo.
+    </div>
+    <div class="hidden opacity-100 transition-opacity duration-150 ease-linear data-[te-tab-active]:block border-2 border-[#808013] p-2"
+      id="tabs-profile" role="tabpanel" aria-labelledby="tabs-profile-tab">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor
+      sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor sit amet,
+      consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor sit amet, consectetur
+      adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, Pulvinar dapibus leo.
+    </div>
+    <div class="hidden opacity-100 transition-opacity duration-150 ease-linear data-[te-tab-active]:block p-2 border-2 border-[#F8A488]"
+      id="tabs-messages" role="tabpanel" aria-labelledby="tabs-profile-tab">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor
+      sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor sit amet,
+      consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar dapibus leo.Lorem ipsum dolor sit amet, consectetur
+      adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, Pulvinar dapibus leo.
+    </div>
+  </div>
+
+  <div class="grid grid-cols-4 bg-[#E7F2ED]">
+    <div class="text-center col-span-4 text-4xl font-head p-4">
+      Lets Collaborate Together
+    </div>
+
+    <div class="flex col-span-4 mx-40 my-14 text-[#777777] font-head text-xl">
+      <div class="mx-5">What is Lorem Ipsum? <br>
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
+        Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it
+        to make a type specimen book. </div>
+
+      <div class="mx-5">It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.
+        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing
+      </div>
+
+      <div class="mx-5">software like Aldus PageMaker including versions of Lorem Ipsum.
+        Why do we use it?
+        It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of
+        using Lorem Ipsum is that it has a more-or-less normal distribution of</div>
+
+      <div class="mx-5"> letters, as opposed to using 'Content here, content here', making it look like readable English.
+        Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will
+        uncover many web sites still in their infancy. </div>
+    </div>
+  </div>
+
+  <div class="grid grid-cols-3 mb-20">
+    <div class="col-span-3 text-center text-6xl my-10 font-head">
+      Recent Posts
+    </div>
+
+
+    <div class="col-span-3 flex">
+      <div class="mx-20 hover:bg-[#E7F2ED] w-[460px]">
+        <div>
+          <img src="https://i.ibb.co/ZXR65sK/17-2.png" alt="Image">
+        </div>
+        <div class="text-center w-[460px] border-2 border-[#D0D0A7] p-4 font-head border-t-0">
+          <div>
+            PHOTO
+          </div>
+          <div>
+            Little Known Ways To Rid YourSelf
+          </div>
+          <div class="my-3">
+            June 20,2021
+          </div>
+          <div class="border-b-2 border-[#D0D0A7] mb-3">
+          </div>
+          <div class="text-left mx-5">Special cloth alert. Fan luv. Celebrate success right, the only way, apple. Give thanks to the most high. In
+            life there will be road blocks but we will over come...</div>
+          <div class="border-2 border-[#D0D0A7] w-[130px] mx-auto my-3 hover:bg-[#D0D0A7] hover:text-white font-head">Read More</div>
+        </div>
+      </div>
+
+
+      <div class="mx-20 hover:bg-[#E7F2ED] w-[460px]">
+        <div class="text-center w-[460px] border-2 border-[#D0D0A7] p-4 font-head border-b-0">
+          <div>
+            PHOTO
+          </div>
+          <div>
+            Little Known Ways To Rid YourSelf
+          </div>
+          <div class="my-3">
+            June 20,2021
+          </div>
+          <div class="border-b-2 border-[#D0D0A7] mb-3">
+          </div>
+          <div class="text-left mx-5">Special cloth alert. Fan luv. Celebrate success right, the only way, apple. Give thanks to the most high. In
+            life there will be road blocks but we will over come...</div>
+          <div class="border-2 border-[#D0D0A7] w-[130px] mx-auto my-3 hover:bg-[#D0D0A7] hover:text-white font-head">Read More</div>
+        </div>
+
+        <div>
+          <img src="https://i.ibb.co/ZXR65sK/17-2.png" alt="Image">
+        </div>
+      </div>
+
+      <div class="mx-20 hover:bg-[#E7F2ED] w-[460px]">
+        <div>
+          <img src="https://i.ibb.co/ZXR65sK/17-2.png" alt="Image">
+        </div>
+        <div class="text-center w-[460px] border-2 border-[#D0D0A7] p-4 font-head border-t-0">
+          <div>
+            PHOTO
+          </div>
+          <div>
+            Little Known Ways To Rid YourSelf
+          </div>
+          <div class="my-3">
+            June 20,2021
+          </div>
+          <div class="border-b-2 border-[#D0D0A7] mb-3">
+          </div>
+          <div class="text-left mx-5">Special cloth alert. Fan luv. Celebrate success right, the only way, apple. Give thanks to the most high. In
+            life there will be road blocks but we will over come...</div>
+          <div class="border-2 border-[#D0D0A7] w-[130px] mx-auto my-3 hover:bg-[#D0D0A7] hover:text-white font-head">Read More</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-span-3 flex mt-20">
+      <div class="mx-20 hover:bg-[#E7F2ED] w-[460px]">
+        <div class="text-center font-head border-2 border-[#D0D0A7] border-b-0">
+          <div class="my-2">
+            PHOTO
+          </div>
+          <div class="my-2">
+            Little Known Ways To Rid YourSelf
+          </div>
+          <div class="my-2">
+            June 20,2021
+          </div>
+        </div>
+
+        <div>
+          <img src="https://i.ibb.co/ZXR65sK/17-2.png" alt="Image">
+        </div>
+
+        <div class="border-2 border-[#D0D0A7] border-t-0">
+          <div class="text-left mx-5 my-3 font-head">
+            Special cloth alert. Fan luv. Celebrate success right, the only way, apple. Give thanks to the most high. In life there will be road
+            blocks
+            but we will over come...
+          </div>
+          <div class="border-2 border-[#D0D0A7] w-[130px] mx-auto my-3 hover:bg-[#D0D0A7] hover:text-white font-head text-center">Read More</div>
+        </div>
+      </div>
+
+      <div class="mx-20 hover:bg-[#E7F2ED] w-[460px]">
+        <div class="text-center font-head border-2 border-[#D0D0A7] border-b-0">
+          <div class="my-2">
+            PHOTO
+          </div>
+          <div class="my-2">
+            Little Known Ways To Rid YourSelf
+          </div>
+          <div class="my-2">
+            June 20,2021
+          </div>
+        </div>
+
+        <div>
+          <img src="https://i.ibb.co/ZXR65sK/17-2.png" alt="Image">
+        </div>
+
+        <div class="border-2 border-[#D0D0A7] border-t-0">
+          <div class="text-left mx-5 my-3 font-head">
+            Special cloth alert. Fan luv. Celebrate success right, the only way, apple. Give thanks to the most high. In life there will be road
+            blocks
+            but we will over come...
+          </div>
+          <div class="border-2 border-[#D0D0A7] w-[130px] mx-auto my-3 hover:bg-[#D0D0A7] hover:text-white font-head text-center">Read More</div>
+        </div>
+      </div>
+
+      <div class="mx-20 hover:bg-[#E7F2ED] w-[460px]">
+        <div class="text-center font-head border-2 border-[#D0D0A7] border-b-0">
+          <div class="my-2">
+            PHOTO
+          </div>
+          <div class="my-2">
+            Little Known Ways To Rid YourSelf
+          </div>
+          <div class="my-2">
+            June 20,2021
+          </div>
+        </div>
+
+        <div>
+          <img src="https://i.ibb.co/ZXR65sK/17-2.png" alt="Image">
+        </div>
+
+        <div class="border-2 border-[#D0D0A7] border-t-0">
+          <div class="text-left mx-5 my-3 font-head">
+            Special cloth alert. Fan luv. Celebrate success right, the only way, apple. Give thanks to the most high. In life there will be road
+            blocks
+            but we will over come...
+          </div>
+          <div class="border-2 border-[#D0D0A7] w-[130px] mx-auto my-3 hover:bg-[#D0D0A7] hover:text-white font-head text-center">Read More</div>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-span-3 font-head border border-[#D0D0A7] text-center w-96 p-2 mx-auto my-7 text-4xl">
+      VIEW MORE POSTS
+    </div>
+  </div>
+ 
+
+
+  <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
 </body>
+
 </html>
