--- a/web/index.html
+++ b/web/index.html
@@ -142,11 +142,11 @@
   </div>
 
   <div class="grid grid-cols-3 xl:ml-28 mb-20">
-    <div class="grid-cols-1 mt-8">
-      <div>
+    <div class="mt-8 xl:grid-cols-1">
+      <div class="col-span-3 xl:col-span-1">
         <div class="relative">
           <div class="absolute h-full hover:bg-[#00000095] w-[460px]">
-            <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center">ARCHITECTURE
+            <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center hidden xl:block">ARCHITECTURE
             </div>
           </div>
           <img src="https://i.ibb.co/qy5qmQS/20-22.png" alt="Image">
@@ -157,7 +157,7 @@
         <div>
           <div class="relative">
             <div class="absolute h-full w-[460px] hover:bg-[#00000095]">
-              <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center">PHOTOGRAPHY
+              <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center hidden xl:block">PHOTOGRAPHY
               </div>
             </div>
             <img src="https://i.ibb.co/MZHyzmw/7-1.png" alt="image">
@@ -184,7 +184,7 @@
       <div class="mt-8">
         <div class="relative">
           <div class="absolute h-full w-[460px] hover:bg-[#00000095]">
-            <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center">INTERIOR</div>
+            <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center hidden xl:block">INTERIOR</div>
           </div>
           <img src="https://i.ibb.co/GMQhjhg/21-1.png" alt="Image">
         </div>
@@ -192,7 +192,7 @@
 
         <div class="relative mt-28">
           <div class="absolute h-full w-[460px] hover:bg-[#00000095]">
-            <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center">ANIMAL</div>
+            <div class="absolute bg-white p-4 top-32 left-44 hover:left-0 hover:w-full hover:text-center hidden xl:block">ANIMAL</div>
           </div>
           <img src="https://i.ibb.co/YjBV3g5/22-1.png" alt="Image">
         </div>
@@ -201,7 +201,7 @@
   </div>
 
   <div class="grid grid-cols-2 bg-[#E7F2ED]">
-    <div class="border-r-2 border-[#D0D0A7] py-28">
+    <div class="xl:border-r-2 xl:border-[#D0D0A7] border-r-0 py-28 col-span-2 xl:col-span-1 xl:mx-0 mx-2">
       <div class="text-3xl font-head mb-8 2xl:ml-60">
         Tools For Creatives
       </div>
@@ -217,8 +217,8 @@
       </div>
     </div>
 
-    <div class="justify-self-center flex my-auto">
-      <div class="mx-5">
+    <div class="justify-self-center flex my-auto col-span-2 xl:col-span-1">
+      <div class="xl:mx-5 mx-0">
         <img src="https://i.ibb.co/c3LVy4S/23.png" alt="Image" class="h-96">
       </div>
 
@@ -228,13 +228,13 @@
     </div>
   </div>
 
-  <div class="grid grid-cols-3 mx-24 py-10 pb-32">
-    <div class="border-2 boreder-[#D0D0A7] py-5 px-5 mx-10 font-head hover:bg-[#E7F2ED] 2xl:h-56 ">
+  <div class="grid grid-cols-3 xl:mx-24 py-10 pb-32">
+    <div class="border-2 boreder-[#D0D0A7] py-5 px-5 xl:mx-10 mx-0 font-head hover:bg-[#E7F2ED] 2xl:h-56  col-span-3 xl:col-span-1 hidden xl:block">
       “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor interdum ipsum, non finibus libero. Lorem
       ipsum dolor sit amet, consectetur
       adipiscing elit.”
-      <div class="xl:py-16 xl:pl-36">
-        <div class="absolute 2xl:p-2.5">
+      <div class="xl:py-16 2xl:py-12 xl:pl-36 2xl:pl-24 hidden xl:block">
+        <div class="absolute 2xl:p-2.5 xl:p-2.5">
           <img src="https://i.ibb.co/TPj4Pcj/Ellipse-10.png" alt="Image">
         </div>
         <img src="https://i.ibb.co/28dGXN0/Ellipse-11.png" alt="Circle">
@@ -244,11 +244,11 @@
       </div>
     </div>
 
-    <div class="border-2 boreder-[#D0D0A7] py-5 px-5 mx-10 font-head hover:bg-[#E7F2ED]  2xl:h-56">
+    <div class="border-2 boreder-[#D0D0A7] py-5 px-5 mx-10 font-head hover:bg-[#E7F2ED]  2xl:h-56 hidden xl:block">
       “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor interdum ipsum, non finibus libero. Lorem
       ipsum dolor sit amet, consectetur
       adipiscing elit.”
-      <div class="xl:py-16 xl:pl-36">
+      <div class="xl:py-16 2xl:py-12 xl:pl-36 2xl:pl-24">
         <div class="absolute 2xl:p-2.5">
           <img src="https://i.ibb.co/RBKxrb0/Ellipse-10-1.png" alt="Image">
         </div>
@@ -259,11 +259,11 @@
       </div>
     </div>
 
-    <div class="border-2 boreder-[#D0D0A7] py-5 px-5 mx-10 font-head hover:bg-[#E7F2ED]  2xl:h-56 ">
+    <div class="border-2 boreder-[#D0D0A7] py-5 px-5 mx-10 font-head hover:bg-[#E7F2ED]  2xl:h-56 hidden xl:block">
       “Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut tempor interdum ipsum, non finibus libero. Lorem
       ipsum dolor sit amet, consectetur
       adipiscing elit.”
-      <div class="xl:py-16 xl:pl-36">
+      <div class="xl:py-16 2xl:py-12 xl:pl-36 2xl:pl-24">
         <div class="absolute 2xl:p-2.5">
           <img src="https://i.ibb.co/X5FjsMv/Ellipse-10-2.png" alt="Image">
         </div>
@@ -275,7 +275,7 @@
     </div>
   </div>
 
-  <div class="grid grid-cols-3 bg-[#E7F2ED] pt-16">
+  <!-- <div class="grid grid-cols-3 bg-[#E7F2ED] pt-16">
     <div class="flex col-span-2 justify-self-end">
       <div class="mr-32 my-auto col-span-1">
         <img src="https://cdn-icons-png.flaticon.com/128/2985/2985162.png" alt="Larrow" class="h-[30px]">
@@ -287,30 +287,31 @@
     </div>
 
 
-    <div>
+    <div class="hidden xl:block">
       <img src="https://i.ibb.co/6WqXN6w/26.png" alt="Image">
     </div>
 
-  </div>
+  </div> -->
 
 
-  <ul class="mb-5 flex list-none flex-col flex-wrap border-b-0 pl-0 md:flex-row pt-16 mx-40" role="tablist" data-te-nav-ref>
+  <div class="grid-cols-1 col-span-1">
+  <ul class="mb-5 flex list-none flex-row flex-nowrap border-b-0 pl-0 md:flex-row xl:pt-16 p-0 xl:mx-40 mx-0" role="tablist" data-te-nav-ref>
     <li role="presentation">
-      <a href="#tabs-home" class="my-2 block  px-7 pt-4 pb-3.5 text-3xl font-head font-medium uppercase leading-tight text-black"
+      <a href="#tabs-home" class="my-2 block  xl:px-7 px-0 pt-4 pb-3.5 xl:text-3xl text-xl font-head font-medium uppercase leading-tight text-black"
         data-te-toggle="pill" data-te-target="#tabs-home" data-te-nav-active role="tab" aria-controls="tabs-home" aria-selected="true">Lifestyle </a>
     </li>
     <li role="presentation">
       <a href="#tabs-profile"
-        class="focus:border-transparen my-2 block px-7 pt-4 pb-3.5 text-3xl font-head font-medium uppercase leading-tight text-black"
+        class="focus:border-transparen my-2 block xl:px-7 px-0 pt-4 pb-3.5 xl:text-3xl text-xl font-head font-medium uppercase leading-tight text-black"
         data-te-toggle="pill" data-te-target="#tabs-profile" role="tab" aria-controls="tabs-profile" aria-selected="false">Travel</a>
     </li>
     <li role="presentation">
       <a href="#tabs-messages"
-        class="my-2 block border-x-0 border-t-0 border-b-2 border-transparent px-7 pt-4 pb-3.5 text-3xl font-head font-medium uppercase leading-tight text-black hover:isolate hover:border-transparent focus:isolate focus:border-transparent  dark:text-neutral-400 dark:hover:bg-transparent dark:data-[te-nav-active]:border-primary-400 dark:data-[te-nav-active]:text-primary-400"
+        class="focus:border-transparen xl:my-2 my-0 block xl:px-7 pt-4 xl:pb-3.5 pb-0 xl:text-3xl font-head font-medium uppercase leading-tight text-black"
         data-te-toggle="pill" data-te-target="#tabs-messages" role="tab" aria-controls="tabs-messages" aria-selected="false">Photos</a>
     </li>
   </ul>
-  <div class="mb-6 pb-16 mx-40">
+  <div class="mb-6 pb-16 xl:mx-40 mx-0">
     <div class="hidden opacity-100 transition-opacity duration-150 ease-linear data-[te-tab-active]:block p-2 border-2 border-[#0B8497]"
       id="tabs-home" role="tabpanel" aria-labelledby="tabs-home-tab" data-te-tab-active>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, pulvinar
@@ -342,51 +343,57 @@
       adipiscing elit. Ut elit tellus, luctus nec ullamcorper mattis, Pulvinar dapibus leo.
     </div>
   </div>
+</div>
 
   <div class="grid grid-cols-4 bg-[#E7F2ED]">
     <div class="text-center col-span-4 text-4xl font-head p-4">
       Lets Collaborate Together
     </div>
 
-    <div class="flex col-span-4 mx-40 my-14 text-[#777777] font-head text-xl">
-      <div class="mx-5">What is Lorem Ipsum? <br>
+    <div class="xl:flex col-span-4 xl:mx-40 mx-0 xl:my-14 my-0 text-[#777777] font-head text-xl">
+      <div class="xl:mx-5 mx-0 col-span-4">What is Lorem Ipsum? <br>
         Lorem Ipsum is simply dummy text of the printing and typesetting industry. <br>
         Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a
         galley of type and scrambled it
         to make a type specimen book. </div>
 
-      <div class="mx-5">It has survived not only five centuries, but also the leap into electronic typesetting,
+      <div class="mx-5 hidden xl:block">It has survived not only five centuries, but also the leap into electronic typesetting,
         remaining essentially unchanged.
         It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more
         recently with desktop publishing
       </div>
 
-      <div class="mx-5">software like Aldus PageMaker including versions of Lorem Ipsum.
+      <div class="mx-5 hidden xl:block">software like Aldus PageMaker including versions of Lorem Ipsum.
         Why do we use it?
         It is a long established fact that a reader will be distracted by the readable content of a page when looking at
         its layout. The point of
         using Lorem Ipsum is that it has a more-or-less normal distribution of</div>
 
-      <div class="mx-5"> letters, as opposed to using 'Content here, content here', making it look like readable
+      <div class="mx-5 hidden xl:block"> letters, as opposed to using 'Content here, content here', making it look like readable
         English.
         Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a
         search for 'lorem ipsum' will
         uncover many web sites still in their infancy. </div>
     </div>
+
+    <div class="border-2 border-[#D0D0A7] col-span-4 block xl:hidden my-5 p-2 font-head w-28">
+      Read More
+    </div>
   </div>
 
   <div class="grid grid-cols-3 mb-20">
-    <div class="col-span-3 text-center text-6xl my-10 font-head">
+    <div class="col-span-3 text-center xl:text-6xl text-4xl my-10 font-head">
       Recent Posts
     </div>
 
 
-    <div class="col-span-3 flex">
-      <div class="mx-20 hover:bg-[#E7F2ED] w-[460px]">
-        <div>
+    <div class="col-span-3 2xl:flex">
+
+      <div class="mx-20 hover:bg-[#E7F2ED] w-[460px] col-span-3 xl:col-span-1 my-3">
+        <div class="hidden 2xl:block xl:block">
           <img src="https://i.ibb.co/ZXR65sK/17-2.png" alt="Image">
         </div>
-        <div class="text-center w-[460px] border-2 border-[#D0D0A7] p-4 font-head border-t-0">
+        <div class="text-center w-[460px] border-2 border-[#D0D0A7]  p-4 font-head border-t-0">
           <div>
             PHOTO
           </div>
